[XForms] NPOTDB Implement XForms XPath number functions power, random and compare. Bug 415963, p=msterlin r=olli+aaronr